[package]
name = "pll5p49v"
version = "0.1.0"
edition = "2021"
description = "Embassy/async Rust driver for the Renesas 5P49V clocks"
keywords = ["embedded", "pll", "clock", "renesas", "embassy"]
categories = ["embedded", "asynchronous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ur8us/pll5p49v"

[dependencies]
# embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
embedded-hal-02 = { package="embedded-hal", version="^0.2" }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
