[package]
name = "pll5p49v"
version = "0.1.1"
edition = "2021"
description = "Embassy/async + blocking Rust driver for the Renesas 5P49V clocks"
keywords = ["embedded", "pll", "clock", "renesas", "embassy"]
categories = ["embedded", "asynchronous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ur8us/pll5p49v"

[dependencies]
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0" 
defmt = "1.0.1"
defmt-rtt = "1.0.0"
