[package]
edition = "2021"
name = "pll5p49v-examples-mspm0g3507"
version = "0.1.0"

[dependencies]
embassy-mspm0 = { version = "0.1.0",  features = ["mspm0g3507rhb", "defmt", "rt", "time-driver-any"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
# embassy-time = { version = "0.5.0", features = ["defmt"] }
panic-halt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0"}
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
panic-semihosting = "0.6.0"

embedded-hal-async = "1.0.0"
embedded-io-async = "0.7.0"

pll5p49v = { version = "0.1.0", path = "../../" }

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/mspm0g3507" }
]

# Patch crate locations

[patch.crates-io]
# embassy-time = { path = "../../../embassy/embassy-time" }
# embassy-time-driver = { path = "../../../embassy/embassy-time-driver" }
embassy-mspm0 = { path = "../../../embassy/embassy-mspm0" }
