[package]
name = "pll5p49v-examples-rp2350"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-rp = { version = "0.8.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0" }
pll5p49v = { version = "0.1.0", path = "../../" }

